docker-compose.yml was fixed for better availability in codespaces

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: dev_app
     profiles:
       - dev
+    env_file:
+      - .env.dev
     depends_on:
       - mailhog
       - redis
@@ -21,6 +23,8 @@ services:
       file: ./docker-compose.base.yml
       service: app
     container_name: test_app
+    env_file:
+      - .env.test
     profiles:
       - test
     depends_on:
