--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "local:docker:test": "docker compose --env-file .env.local.test --profile localTest up",
     "local:dev": "npm run local:prestart:dev && cross-env DOTENV_CONFIG_PATH=.env.local.dev nodemon --watch src -L  --verbose --exec \"node --watch -r dotenv/config -r ts-node/register src/index.ts\"",
     "local:test": "npm run local:prestart:test && cross-env DOTENV_CONFIG_PATH=.env.local.test mocha -r dotenv/config -r ts-node/register --config .mocharc.js",
-    "local:prestart:dev": "npx prisma generate && POSTGRES_URL=postgresql://admin:postgres@localhost:54321/development npx prisma db push && npm run apidoc",
-    "local:prestart:test": "npx prisma generate && POSTGRES_URL=postgresql://test:test@localhost:54322/test npx prisma db push && npm run apidoc",
+    "local:prestart:dev": "npx prisma generate && MYSQL_URL=mysql://admin:mysql@localhost:3306/development npx prisma db push && npm run apidoc",
+    "local:prestart:test": "npx prisma generate && MYSQL_URL=mysql://test:test@localhost:3307/test npx prisma db push && npm run apidoc",
     "type:check": "tsc --project tsconfig.json --noEmit",
     "db:pull": "npx prisma db pull",
     "db:push": "npx prisma db push",
-    "db:seed:local": "POSTGRES_URL=postgresql://admin:postgres@localhost:54321/development node -r ts-node/register scripts/seed.ts",
+    "db:seed:local": "MYSQL_URL=mysql://admin:mysql@localhost:3306/development node -r ts-node/register scripts/seed.ts",
     "db:seed": "node -r ts-node/register scripts/seed.ts",
     "db:validate": "npx prisma validate",
     "apidoc": "node -r ts-node/register ./scripts/apiDoc.ts",
