--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -9,11 +9,11 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV}
       - PORT=${PORT}
-      - POSTGRES_URL=${POSTGRES_URL}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - MYSQL_URL=${MYSQL_URL}
+      - MYSQL_PORT=${MYSQL_PORT}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DB=${MYSQL_DB}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - COOKIE_SECRET_KEY=${COOKIE_SECRET_KEY}
@@ -27,16 +27,16 @@ services:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - SENTRY_DNS=${SENTRY_DNS}
 
-  postgres:
-    image: postgres:17.3
-    shm_size: 1gb
+  mysql:
+    image: mysql:8.4
+    command: --port=${MYSQL_PORT}
     ports:
-      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+      - "${MYSQL_PORT}:${MYSQL_PORT}"
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - PGPORT=${POSTGRES_PORT}
+      MYSQL_DATABASE: ${MYSQL_DB}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
     restart: always
 
   mailhog:
