--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     command: >
       sh -c '
         npm install --legacy-peer-deps &&
+        npm run build:frontend &&
         npm run start;
       '
 
