--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@sentry/types": "9.1.0",
     "@types/chai": "5.0.1",
     "@types/config": "3.3.0",
-    "@types/cors": "^2.8.19",
+    "@types/cors": "2.8.19",
     "@types/crypto-js": "4.2.2",
     "@types/ejs": "3.1.5",
     "@types/express": "4.17.17",
