ts config was updated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
       "es2022"
     ],
     "module": "CommonJS",
-    "outDir": "./dist",
+    "moduleResolution": "node",
     "target": "es2022",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "sourceMap": true,
