--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "docker:test": "docker compose --env-file .env.test --profile test up -d && docker attach test_app",
     "local:docker:dev": "docker compose --env-file .env.local.dev --profile localDev up",
     "local:docker:test": "docker compose --env-file .env.local.test --profile localTest up",
-    "local:dev": "npm run local:prestart:dev && cross-env DOTENV_CONFIG_PATH=.env.local.dev nodemon --watch src -L  --verbose --exec \"node --watch -r dotenv/config -r ts-node/register src/index.ts\"",
-    "local:test": "npm run local:prestart:test && cross-env DOTENV_CONFIG_PATH=.env.local.test mocha -r dotenv/config -r ts-node/register --config .mocharc.js",
+    "local:dev": "cross-env DOTENV_CONFIG_PATH=.env.local.dev bash -c \"npm run local:prestart:dev && nodemon --watch src -L --verbose --exec 'node -r dotenv/config -r ts-node/register src/index.ts'\"",
+    "local:test": "cross-env DOTENV_CONFIG_PATH=.env.local.test bash -c \"npm run local:prestart:test && mocha -r dotenv/config -r ts-node/register --config .mocharc.js\"",
     "local:prestart:dev": "npx prisma generate && MYSQL_URL=mysql://admin:mysql@localhost:3306/development npx prisma db push && npm run apidoc",
     "local:prestart:test": "npx prisma generate && MYSQL_URL=mysql://test:test@localhost:3307/test npx prisma db push && npm run apidoc",
     "type:check": "tsc --project tsconfig.json --noEmit",
